--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="buttons">
           <div class="numbers">
             <button class="numButton" type="button">1</button>
-            <button class="numButton" class="numButton" type="button">2</button>
+            <button class="numButton" type="button">2</button>
             <button class="numButton" type="button">3</button>
             <button class="numButton" type="button">4</button>
             <button class="numButton" type="button">5</button>
@@ -22,14 +22,16 @@
             <button class="numButton" type="button">8</button>
             <button class="numButton" type="button">9</button>
             <button class="numButton" type="button">0</button>
+            <button class="numButton" id="decimal" type="button">.</button>
+            <button id="equal" type="button">=</button>
           </div>
           <div class="functions">
+            <button class="funcButton" id="clear" type="button">Clear</button>
+            <button class="funcButton" id="backspace" type="button">Backspace</button>
             <button class="funcButton" id="operator" type="button">+</button>
             <button class="funcButton" id="operator" type="button">-</button>
             <button class="funcButton" id="operator" type="button">*</button>
             <button class="funcButton" id="operator" type="button">/</button>
-            <button class="funcButton" id="equal" type="button">=</button>
-            <button class="funcButton" id="clear" type="button">Clear</button>
           </div>
         </div>
       </div>
